css background update

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 body {
   font-family: "Titillium Web", sans-serif;
   font-size: 16px;
+  /* background-color: aqua; */
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-image: linear-gradient(to top, rgb(168, 168, 255), white);
 }
 
 h1,
@@ -12,17 +16,15 @@ h6 {
   font-weight: 700;
 }
 
-main{
-  /* background-image: linear-gradient(to top, rgb(151, 151, 255), white); */
+main {
 }
 
-.weather-card{
-    max-width: 11rem;
+.weather-card {
+  max-width: 11rem;
 }
 
 @media only screen and (max-width: 417px) {
-    .weather-card{
-        max-width: 19rem;
-    }
-    
+  .weather-card {
+    max-width: 19rem;
+  }
 }
